--- a/media/css/home.css
+++ b/media/css/home.css
@@ -15,7 +15,16 @@ font-size:24px;
 font-weight:700;
 }
 }
-
+@media only screen and (min-width: 600px){
+    #container {
+        width: 100%;
+        padding: 0 2em;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+        overflow: hidden;
+    }
+}
 html {
 font-size:100%;
 -webkit-text-size-adjust:100%;
