--- a/media/css/style.css
+++ b/media/css/style.css
@@ -30,10 +30,11 @@ pre code{margin:1em 0;font-size:13px;line-height:1.6;display:block;overflow:auto
 blockquote{display:block;text-align:justify;border-left:4px solid #eeeeee;}
 blockquote{margin:1em 0em;padding-left:1.5em;}
 blockquote p{margin:0;padding:.5em 0;}
-#container{width: 100%;margin:2em auto;display:block;padding:0 2em;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box;overflow: hidden;}
+#container{width: 100%;margin:2em auto;display:block;padding:0 2em;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box;}
 @media only screen and (min-width: 600px){
     #container {
 		width:600px;
+		overflow: hidden;
     }
 }
 .content{font-size:16px;line-height:24px;}
